feat: add delete annotation functionality and improve code formatting

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -53,7 +53,10 @@
         <input type="color" [(ngModel)]="e.coord.color" />
         <button (click)="confirmEdit()">✅</button>
         <button (click)="cancelEdit()">❌</button>
+        <!-- NUEVO BOTÓN DE BORRAR -->
+        <button class="btn-delete" (click)="deleteAnnotation()">🗑️</button>
       </div>
+
     </div>
   </div>
 
