fix: improve rendering and styling of annotations in PDF viewer

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -164,6 +164,10 @@ header .logo {
   border-radius: 4px;
   white-space: nowrap;
   transition: .2s;
+  font-family: 'Helvetica, Arial, sans-serif';
+  font-weight: normal;
+  letter-spacing: 0;
+  line-height: 1;
 }
 
 .annotation:hover {
