Add translation for "Download PDF" in multiple languages and update button label

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,7 +20,8 @@
       <button class="btn" (click)="copyJSON()" [disabled]="!coords().length">{{ 'controls.copyJson' | t }}</button>
       <button class="btn" (click)="downloadJSON()"
         [disabled]="!coords().length">{{ 'controls.downloadJson' | t }}</button>
-      <button class="btn" (click)="downloadAnnotatedPDF()" [disabled]="!coords().length || !pdfDoc">DownloadPDF</button>
+      <button class="btn" (click)="downloadAnnotatedPDF()"
+        [disabled]="!coords().length || !pdfDoc">{{ 'controls.downloadPdf' | t }}</button>
     </div>
 
     <div class="language-selector">
